--- a/layouts/shortcodes/osm.html
+++ b/layouts/shortcodes/osm.html
@@ -1,4 +1,3 @@
 <div>
-<iframe src="https://osm.org/go/{{ index .Params 0 }}?layers=N&m=" width="600" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-</iframe>
+<iframe width="600" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?{{ index .Params 0 }}" style="border: 1px solid black"></iframe>
 </div>
