move impressum and datenschutz to footer

--- a/themes/beautifulhugo/layouts/partials/footer.html
+++ b/themes/beautifulhugo/layouts/partials/footer.html
@@ -42,10 +42,10 @@
           &nbsp;&bull;&nbsp;
           {{ .Site.LastChange.Format "2006" }}
 
-          {{ if .Site.Title }}
             &nbsp;&bull;&nbsp;
-            <a href="{{ "" | absLangURL }}">{{ .Site.Title }}</a>
-          {{ end }}
+            <a href="/page/datenschutz">Datenschutzerklärung</a>
+            &nbsp;&bull;&nbsp;
+            <a href="/page/impressum">Impressum</a>
         </p>
         <!-- Please don't remove this, keep my open source work credited :) -->
         <p class="credits theme-by text-muted">
