change header image

--- a/themes/beautifulhugo/layouts/index.html
+++ b/themes/beautifulhugo/layouts/index.html
@@ -8,7 +8,7 @@
           </div>
         {{ end }}
 
-	<img src="img/family.jpg"/>
+	<img src="img/selis.jpg"/>
 
         <div class="posts-list">
           {{ $pag := .Paginate (where .Data.Pages "Type" "blog") }}
